Revert "Fix alignment in chrome."
This reverts commit d3b17a2a50c2b67cf9640bbdd6ad2e41c5268c84.

--- a/ui/src/components/PipelineEditor/Editor.css
+++ b/ui/src/components/PipelineEditor/Editor.css
@@ -249,7 +249,7 @@
   padding: 3px 6px;
 }
 
-.ioList .imgHoverAppear:hover textarea {
+.ioList textarea:hover {
   border: 1px solid #bbb;
   padding: 2px 5px;
 }
